--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
    <div class="right">
     <img src="shopping.png" class="shoppingimg" alt="Shopping" />
   </div>     
-  </section>
+  </section> .
   
   <footer>
-    <p> Thank You</p>
+    <p> Thank You</p> hi
 
     <a href="mailto:70147961@student.uol.edu.pk" >Email Me </a>  
    
-  </footer>
+  </footer>>>>>
 
 </body>
 </html>
